--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css -->
-    <link rel="stylesheet" href="/asset/reset.css" />
-    <link rel="stylesheet" href="/asset/style.css" />
+    <link rel="stylesheet" href="./asset/reset.css" />
+    <link rel="stylesheet" href="./asset/style.css" />
     <title>Shine smile</title>
     <!-- Embed font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -95,8 +95,10 @@
   <body>
     <header class="header">
       <div class="container">
-        <a href="/">
-          <div class="header-top">
+        <!-- header-top -->
+        <div class="header-top">
+          <!-- logo -->
+          <a href="/">
             <div class="logo">
               <span class="logo__circle"></span>
               <span class="logo__text">
@@ -104,8 +106,30 @@
                 <span class="logo__brand logo__brand--sm">smile</span>
               </span>
             </div>
+          </a>
+          <!-- navbar -->
+          <nav class="navbar">
+            <ul class="navbar__list">
+              <li class="navbar__item">
+                <a href="" class="navbar__link navbar__link--active">Home</a>
+              </li>
+              <li class="navbar__item">
+                <a href="" class="navbar__link">About</a>
+              </li>
+              <li class="navbar__item">
+                <a href="" class="navbar__link">Services</a>
+              </li>
+              <li class="navbar__item">
+                <a href="" class="navbar__link">Doctors</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- Action -->
+          <div class="action">
+            <a href="" class="action__login">Login</a>
+            <a href="" class="btn action__signup">Sign Up</a>
           </div>
-        </a>
+        </div>
       </div>
     </header>
   </body>
