--- a/index.html
+++ b/index.html
@@ -130,6 +130,28 @@
             <a href="" class="btn action__signup">Sign Up</a>
           </div>
         </div>
+        <!-- hero  -->
+        <section class="hero">
+          <!-- hero content  -->
+          <section class="hero__content">
+            <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
+            <p class="hero_desc">
+              Exceptional dental care for all ages. Your great smile begins with
+              a great dentist.
+            </p>
+            <div class="hero__row">
+              <a href="#!" class="btn">Book Online</a>
+              <span class="hero__phone">or call (123) 456-7890</span>
+            </div>
+          </section>
+          <!-- hero media  -->
+          <div class="hero__media">
+            <figure class="hero__images">
+              <img src="./asset/img/hero-img-01.jpg" alt="" class="hero__img" />
+              <img src="./asset/img/hero-img-01.jpg" alt="" class="hero__img" />
+            </figure>
+          </div>
+        </section>
       </div>
     </header>
   </body>
